# cairotest

./: CMakeCache.txt  CMakeLists.txt  Makefile  cairo_vars.cpp  cairo_vars.h  cairobasic  cmake_install.cmake  compile_commands.json  cr_surfaces.h  displ_funct.cpp  displ_funct.h  free_type_vars.h  ft_vars.cpp  ft_vars.h  main.cpp  structs.h
.clangd/index/: assert.h.576406490FED2D19.idx  cairo-deprecated.h.626CE09D8C5A69EC.idx  cairo-features.h.21E75E86587CDA76.idx  cairo-ft.h.A910D671DFBD5B55.idx  cairo-version.h.E1A1E35618D05E67.idx  cairo.h.BA4956B77D8E23E0.idx  cairo_vars.cpp.006AE7575E085AA7.idx  cairo_vars.h.C383B7781BABD323.idx  core.h.2B5BC9CA7479442C.idx  cr_surfaces.h.48926A74EB3C4F73.idx  displ_funct.cpp.75D78F53D0090B18.idx  displ_funct.h.CEB9DCB287055BBD.idx  freetype.h.B12010FDE6C0922C.idx  ft2build.h.23F211068A84C95F.idx  ft_vars.cpp.8AB2273FCEBF6C5B.idx  ft_vars.h.FB53E0CD7CC8C8DC.idx  ftconfig.h.53D1EE039FB36244.idx  fterrdef.h.F11112513603633E.idx  fterrors.h.5F060A67B2DB2ED4.idx  ftheader.h.DB76037CF2FCA86C.idx  ftimage.h.9B43E30A9360468F.idx  ftmoderr.h.0F7A1845E83EA10A.idx  ftoption.h.9F796DABE0DA1B2A.idx  ftstdlib.h.B46DCBBBD4589145.idx  ftsystem.h.B6DECD1BFD757CA9.idx  fttypes.h.7EE5BDE697C7020D.idx  geom.h.7494B266DEBB96E4.idx  glew.h.278322091FBEA4E2.idx  glew.h.2893ECB5910CD7E1.idx  libconfig.h.9B9EAC8D34BA9318.idx  log.h.596AD61B3BDE7BC7.idx  main.cpp.D29A509E47ED81ED.idx  math.h.1F5B4C502039DB83.idx  math_core.h.1621AB0C02DED3B7.idx  mt_cairo_render.h.00165FFCA4A7EC1A.idx  safe_alloc.h.94AC0F6D63B14551.idx  structs.h.35DE78540502B931.idx  sysmacros.h.5ECD456D368FF05E.idx  tls.h.40A10F8A928C2A55.idx  (+1 more)
